# openai-420

./: .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml
data/: baselines.yaml  ja_zh_baseline_failures.jsonl
docs/: PRINCIPLES.md  answer-extraction-research.md  epistemology-research.md  grok-420-research.md
openai_420/: agents.py  conclude.py  conversation.py  providers.py  ratelimit.py  roster.py  scratchpad.py  tools.py  trace.py
openai_420/orchestrators/: __init__.py  base.py  heterogeneous_consensus.py  parallel_consensus.py  single.py  tool_grounded_verification.py
scripts/: __init__.py
scripts/benchmarks/: README.md  __init__.py  analyze.py  download.py  hf.py  judge.py  logs.py  paths.py  plot.py  registry.py  run.py  score.py  sweep.py  sweep_v002.sh
tests/: conftest.py  test_agents.py  test_conclude.py  test_conversation.py  test_heterogeneous.py  test_openai_health.py  test_parallel_consensus.py  test_providers.py  test_ratelimit.py  test_roster.py  test_scratchpad.py  test_tool_grounded.py  test_tools.py  test_trace.py
