[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = ["openai"]
description = "Grok 4.20's inference-time multi-agent chatroom, rebuilt from scratch — specialist agents debate via tool calls, a captain synthesizes."
license = "Apache-2.0 license"
name = "openai-420"
requires-python = ">=3.11,<4"
version = "0.0.2"

[dependency-groups]
dev = [
  "black",
  "isort",
  "math-verify",
  "matplotlib",
  "numpy",
  "pydantic-monty",
  "pytest",
  "pytest-asyncio",
  "pyyaml",
  "requests",
  "ruff",
  "sympy",
  "tqdm",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.isort]
profile = "black" # keep isort and black from fighting over import wrapping
